@@ -13,6 +13,18 @@
     <artifactId>quarkus-bootstrap-maven-resolver</artifactId>
     <name>Quarkus - Bootstrap - Maven Resolver</name>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-bootstrap-bom</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -108,8 +120,8 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
-        <!-- plugins>
-            <plugin>
+        <plugins>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <executions>
@@ -119,7 +131,17 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin> -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <environmentVariables>
+                        <!-- to verify that MAVEN_OPTS filtering works in BootstrapMavenOptions -->
+                        <MAVEN_OPTS>--add-opens java.base/java.util=ALL-UNNAMED</MAVEN_OPTS>
+                    </environmentVariables>
+                </configuration>
             </plugin>
-        </plugins -->
+        </plugins>
     </build>
 </project>
